--- a/index.html
+++ b/index.html
@@ -107,19 +107,18 @@ We do not have any short-term positions at this time.
     <td>
       <b>PhD Students</b><br>
       <a href="https://himangim.github.io/">Himangi Mittal</a><br>
-      <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (with Abhinav Gupta)<br>
+      <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (co-advised with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
       <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (with  Fernando De la Torre) <br>
-      <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (with Abhinav Gupta)<br>
-      <a href="https://jasonyzhang.com/">Jason Zhang</a>  (with Deva Ramanan)
+      <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (co-advised with Abhinav Gupta)<br>
     </td>
     </tr>
     <tr><td><br></td></tr>
     <tr>
     <td>
       <b>MS Students</b><br>
-      <a href="https://thatbrguy.github.io/">Bharath Raj</a> (MSR)<br>
       <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a> (MSR)<br>
+      <a href="https://qitaozhao.github.io/">Qitao Zhao</a> (MSCV)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
@@ -132,7 +131,15 @@ We do not have any short-term positions at this time.
 </tr>
   <tr><td><br></td></tr>
   <tr><td><b>Alumni</b><br>
-    <em>MSR</em>: <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> <br><br>
+    <em>PhD</em>: <br>
+      <a href="https://jasonyzhang.com/">Jason Zhang</a> (co-advised with Deva Ramanan), <em>Sparse-view 3D in the Wild, 2024. </em> Google
+    <br><br>
+
+    <em>MSR</em>: <br>
+    <a href="https://thatbrguy.github.io/">Bharath Raj</a>. PhD at Cornell<br>
+    <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a>. PhD at Stanford<br>
+    <br>
+
     <em>MSCV</em>: <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
     <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
     <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>, <br>
@@ -161,7 +168,53 @@ We do not have any short-term positions at this time.
 </div>
 
 <div class="section">
-<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showall()" id="unselect" >all</a> | <a href="javascript:showselected()" id="select" >selected</a>) </h2><br><div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="eccv24track2act" data-selected="y">
+<img class="paper" src="https://homangab.github.io/pics/glimpse.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Track2Act: Predicting Point Tracks from Internet Videos Enables Diverse Zero-shot Manipulation</b> <br/> 
+Homanga Bharadhwaj, Roozbeh Mottaghi*, Abhinav Gupta*, <strong>Shubham Tulsiani</strong>* <br/> 
+ECCV, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2405.01527">pdf </a>  &nbsp <a href="https://homangab.github.io/track2act/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv24track2actBib')">bibtex </a>  &nbsp <a href="https://github.com/homangab/Track-2-Act/">code </a> </p>
+<div class="papermeta" id="eccv24track2actMeta">
+<pre xml:space="preserve" id="eccv24track2actBib">
+
+@inproceedings{bharadhwaj2024track2act,
+  author    = {Homanga Bharadhwaj and Roozbeh Mottaghi and Abhinav Gupta and Shubham Tulsiani},
+  title     = {Track2Act: Predicting Point Tracks from Internet Videos enables Diverse Zero-shot Robot Manipulation},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  year      = {2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('eccv24track2actBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="eccv24upfusion" data-selected="n">
+<img class="paper" src="https://bharathrajn.com/assets/img/publication_preview/ITW_lock.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">UpFusion: Novel View Diffusion from Unposed Sparse View Observations</b> <br/> 
+Bharath Raj Nagoor Kani, Hsin-Ying Lee, Sergey Tulyakov, <strong>Shubham Tulsiani</strong> <br/> 
+ECCV, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2312.06661.pdf">pdf </a>  &nbsp <a href="https://upfusion3d.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv24upfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/upfusion3d/upfusion">code </a> </p>
+<div class="papermeta" id="eccv24upfusionMeta">
+<pre xml:space="preserve" id="eccv24upfusionBib">
+
+@inproceedings{kani24upfusion,
+  author    = {Nagoor Kani, Bharath Raj and Lee, Hsin-Ying and Tulyakov, Sergey and Tulsiani, Shubham},
+  title     = {UpFusion: Novel View Diffusion from Unposed Sparse View Observations},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  year      = {2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('eccv24upfusionBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr24ghop" data-selected="y">
 <img class="paper" src="figures/cvpr24ghop.png" />
@@ -186,7 +239,7 @@ hideblock('cvpr24ghopBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr24mvdfusion" data-selected="y">
+<div class="paper" id="cvpr24mvdfusion" data-selected="n">
 <img class="paper" src="figures/cvpr24mvdfusion.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">MVD-Fusion: Single-view 3D via Depth-consistent Multi-view Generation</b> <br/> 
 Hanzhe Hu*, Zhizhuo Zhou*, Varun Jampani, <strong>Shubham Tulsiani</strong> <br/> 
@@ -234,7 +287,7 @@ hideblock('iclr24raysBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="icra24hopman" data-selected="y">
 <img class="paper" src="figures/icra24hopman.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans</b> <br/> 
+<p><b id="papertitle">Towards Generalizable Zero-Shot Manipulation via Translating Human Interaction Plans</b> <br/> 
 Homanga Bharadhwaj, Abhinav Gupta*, Vikash Kumar*, <strong>Shubham Tulsiani</strong>* <br/> 
 ICRA, 2024  <strong style="color:red">(Finalist for Best Paper Award in Robot Manipulation)</strong><br/> 
 <a href="https://homangab.github.io/hopman/hopman_paper_appendix.pdf">pdf </a>  &nbsp <a href="https://homangab.github.io/hopman/">project page </a>  &nbsp <a href="javascript:toggleblock('icra24hopmanBib')">bibtex </a> </p>
@@ -257,7 +310,7 @@ hideblock('icra24hopmanBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="icra24roboagent" data-selected="n">
 <img class="paper" src="https://homangab.github.io/pics/robopen.png" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">RoboAgent: Towards Sample Efficient Robot Manipulation with Semantic Augmentations and Action Chunking</b> <br/> 
+<p><b id="papertitle">RoboAgent: Towards Sample Efficient Robot Manipulation with Semantic Augmentations and Action Chunking</b> <br/> 
 Homanga Bharadhwaj*, Jay Vakil*, Mohit Sharma*, Abhinav Gupta, <strong>Shubham Tulsiani</strong>, Vikash Kumar <br/> 
 ICRA, 2024 <br/> 
 <a href="https://robopen.github.io/media/roboagent.pdf">pdf </a>  &nbsp <a href="https://robopen.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('icra24roboagentBib')">bibtex </a>  &nbsp <a href="https://robopen.github.io/roboset/">data </a> </p>
@@ -1414,7 +1467,7 @@ hideblock('uist13colorsBib');
 <!--------------------------------------------------------------------------->
 
  <script language="javascript" type="text/javascript" xml:space="preserve">
-showselected()</script>
+showall()</script>
 
 <!--------------------------------------------------------------------------->
 <!--- TEMPLATE
