--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Office: Smith Hall 230
 Our group is interested in inferring physically and spatially grounded representations from perceptual input, and leveraging these for advances in fundamental problems in computer vision and robot manipulation. We believe that to enable machines to understand the physical world, we should reduce the reliance on supervision by annotation, and instead develop learning mechanisms informed by the real, physical world we live in – by incorporating our knowledge about its structure and laws as a 'meta-supervisory' signal.
 <br><br>
 
-If you are interested in joining our group, please <a href="javascript:toggleblock('prospective')">read this</a>.
+We are always looking for strongly motivated PhD and MS students. If you are interested in joining our group, please <a href="javascript:toggleblock('prospective')">read this</a>.
 <br>
 <br>
 
@@ -109,31 +109,31 @@ We do not have any short-term positions at this time.
       <a href="https://himangim.github.io/">Himangi Mittal</a><br>
       <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (co-advised with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
-      <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (with  Fernando De la Torre) <br>
-      <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (co-advised with Abhinav Gupta)<br>
+      <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (co-advised with  Fernando De la Torre) <br>
     </td>
     </tr>
     <tr><td><br></td></tr>
     <tr>
     <td>
       <b>MS Students</b><br>
-      <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a> (MSR)<br>
+      <a href="https://rureadyo.github.io/">Sungjae Park</a> (MSR)<br>
       <a href="https://qitaozhao.github.io/">Qitao Zhao</a> (MSCV)<br>
+      <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a> (MSR)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
   <tr>
   <td>
-    <b>Undergraduate Students</b><br>
-    <a href="https://amyxlase.github.io/">Amy Lin</a><br>
-    Lucas Wu<br>
+    <b>Undergraduate Students</b>
+    <br>Lucas Wu<br>
   </td>
 </tr>
   <tr><td><br></td></tr>
   <tr><td><b>Alumni</b><br>
     <em>PhD</em>: <br>
-      <a href="https://jasonyzhang.com/">Jason Zhang</a> (co-advised with Deva Ramanan), <em>Sparse-view 3D in the Wild, 2024. </em> Google
-    <br><br>
+      <a href="https://jasonyzhang.com/">Jason Zhang</a> (co-advised with Deva Ramanan), <em>Sparse-view 3D in the Wild, 2024. </em> Google <br>
+      <a href="https://judyye.github.io/">Yufei Ye</a> (co-advised with Abhinav Gupta), <em>Learning to Perceive and Predict Everyday Interactions, 2024. </em> Postdoc at Stanford <br>
+    <br>
 
     <em>MSR</em>: <br>
     <a href="https://thatbrguy.github.io/">Bharath Raj</a>. PhD at Cornell<br>
@@ -144,7 +144,10 @@ We do not have any short-term positions at this time.
     <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
     <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>, <br>
     <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a>,
-    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a>
+    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a><br>
+    <br>
+
+    <em>Undergraduate</em>: <a href="https://amyxlase.github.io/">Amy Lin</a><br>
 
     </td>
   </tr>
@@ -159,8 +162,9 @@ We do not have any short-term positions at this time.
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
-  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2023, 2022 <br>
-  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2024, 2023, 2022
+  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2024, 2023, 2022 <br>
+  <a href="https://visual-learning.cs.cmu.edu/">16-824: Visual Learning and Recognition</a>. Spring 2025 <br>
+  <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2025, 2024, 2023, 2022
 </td></tr>
 </table>
 
@@ -168,7 +172,78 @@ We do not have any short-term positions at this time.
 </div>
 
 <div class="section">
-<h2> Publications (<a href="javascript:showall()" id="unselect" >all</a> | <a href="javascript:showselected()" id="select" >selected</a>) </h2><br><div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showall()" id="unselect" >all</a> | <a href="javascript:showselected()" id="select" >selected</a>) </h2><br><div class="year_heading" data-selected="n"><br>2025<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="3dv25materialfusion" data-selected="y">
+<video class="paper" muted autoplay loop> 
+ <source src="https://yehonathanlitman.github.io/images/materialfusion.mp4" type="video/mp4"> 
+ </video> 
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">MaterialFusion: Enhancing Inverse Rendering with Material Diffusion Priors</b> <br/> 
+Yehonathan Litman, Or Patashnik, Kangle Deng, Aviral Agrawal, Rushikesh Zawar, Fernando De la Torre, <strong>Shubham Tulsiani</strong> <br/> 
+3DV, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2409.15273">pdf </a>  &nbsp <a href="https://yehonathanlitman.github.io/material_fusion/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv25materialfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/yehonathanlitman/MaterialFusion">code </a> </p>
+<div class="papermeta" id="3dv25materialfusionMeta">
+<pre xml:space="preserve" id="3dv25materialfusionBib">
+
+@inproceedings{litman2025materialfusion,
+  author    = {Yehonathan Litman and Or Patashnik and Kangle Deng and Aviral Agrawal and Rushikesh Zawar and Fernando De la Torre and Shubham Tulsiani},
+  title     = {MaterialFusion: Enhancing Inverse Rendering with Material Diffusion Priors},
+  booktitle = {3DV},
+  year      = {2025}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('3dv25materialfusionBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="3dv25dressrecon" data-selected="n">
+<img class="paper" src="https://jefftan969.github.io/dressrecon/img/dressrecon_icon.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">DressRecon: Freeform 4D Human Reconstruction from Monocular Video</b> <br/> 
+Jeff Tan, Donglai Xiang, <strong>Shubham Tulsiani</strong>, Deva Ramanan, Gengshan Yang <br/> 
+3DV, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2409.20563">pdf </a>  &nbsp <a href="https://jefftan969.github.io/dressrecon/">project page </a>  &nbsp <a href="javascript:toggleblock('3dv25dressreconBib')">bibtex </a>  &nbsp <a href="https://github.com/jefftan969/dressrecon">code </a> </p>
+<div class="papermeta" id="3dv25dressreconMeta">
+<pre xml:space="preserve" id="3dv25dressreconBib">
+
+@inproceedings{tan2024dressrecon,
+  title={DressRecon: Freeform 4D Human Reconstruction from Monocular Video},
+    author={Tan, Jeff and Xiang, Donglai and Tulsiani, Shubham and Ramanan, Deva and Yang, Gengshan},
+  booktitle = {3DV},
+  year      = {2025}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('3dv25dressreconBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+<div class="year_heading" data-selected="n"><br>2024<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="neurips24ags" data-selected="y">
+<img class="paper" src="https://qitaozhao.github.io/images/SparseAGS.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Sparse-view Pose Estimation and Reconstruction via Analysis by Generative Synthesis</b> <br/> 
+Qitao Zhao, <strong>Shubham Tulsiani</strong> <br/> 
+NeurIPS, 2024 <br/> 
+<a href="https://arxiv.org/pdf/2412.03570">pdf </a>  &nbsp <a href="https://qitaozhao.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('neurips24agsBib')">bibtex </a>  &nbsp <a href="https://github.com/QitaoZhao/SparseAGS/">code </a> </p>
+<div class="papermeta" id="neurips24agsMeta">
+<pre xml:space="preserve" id="neurips24agsBib">
+
+@inproceedings{bharadhwaj2024track2act,
+  author    = {Homanga Bharadhwaj and Roozbeh Mottaghi and Abhinav Gupta and Shubham Tulsiani},
+  title     = {Track2Act: Predicting Point Tracks from Internet Videos enables Diverse Zero-shot Robot Manipulation},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  year      = {2024}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('neurips24agsBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="eccv24track2act" data-selected="y">
 <img class="paper" src="https://homangab.github.io/pics/glimpse.gif" />
@@ -218,10 +293,10 @@ hideblock('eccv24upfusionBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr24ghop" data-selected="y">
 <img class="paper" src="figures/cvpr24ghop.png" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">G-HOP: Generative Hand-Object Prior for Interaction Reconstruction and Grasp Synthesis</b> <br/> 
+<p><b id="papertitle">G-HOP: Generative Hand-Object Prior for Interaction Reconstruction and Grasp Synthesis</b> <br/> 
 Yufei Ye, Abhinav Gupta, Kris Kitani, <strong>Shubham Tulsiani</strong> <br/> 
 CVPR, 2024 <br/> 
-<a href="https://arxiv.org/pdf/2404.12383">pdf </a>  &nbsp <a href="https://judyye.github.io/ghop-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24ghopBib')">bibtex </a> </p>
+<a href="https://arxiv.org/pdf/2404.12383">pdf </a>  &nbsp <a href="https://judyye.github.io/ghop-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24ghopBib')">bibtex </a>  &nbsp <a href="https://github.com/JudyYe/ghop">code </a> </p>
 <div class="papermeta" id="cvpr24ghopMeta">
 <pre xml:space="preserve" id="cvpr24ghopBib">
 
@@ -241,7 +316,7 @@ hideblock('cvpr24ghopBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr24mvdfusion" data-selected="n">
 <img class="paper" src="figures/cvpr24mvdfusion.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">MVD-Fusion: Single-view 3D via Depth-consistent Multi-view Generation</b> <br/> 
+<p><b id="papertitle">MVD-Fusion: Single-view 3D via Depth-consistent Multi-view Generation</b> <br/> 
 Hanzhe Hu*, Zhizhuo Zhou*, Varun Jampani, <strong>Shubham Tulsiani</strong> <br/> 
 CVPR, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2404.03656">pdf </a>  &nbsp <a href="https://mvd-fusion.github.io//">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr24mvdfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/zhizdev/mvdfusion">code </a> </p>
@@ -263,8 +338,10 @@ hideblock('cvpr24mvdfusionBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="iclr24rays" data-selected="y">
-<img class="paper" src="figures/iclr24rays.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Cameras as Rays: Pose Estimation via Ray Diffusion</b> <br/> 
+<video class="paper" muted autoplay loop> 
+ <source src="https://jasonyzhang.com/assets/img/ray_diffusion_book_small.mp4" type="video/mp4"> 
+ </video> 
+<p><b id="papertitle">Cameras as Rays: Pose Estimation via Ray Diffusion</b> <br/> 
 Jason Y. Zhang*, Amy Lin*, Moneish Kumar, Tzu-Hsuan Yang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
 ICLR, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2402.14817.pdf">pdf </a>  &nbsp <a href="https://jasonyzhang.com/RayDiffusion/">project page </a>  &nbsp <a href="javascript:toggleblock('iclr24raysBib')">bibtex </a>  &nbsp <a href="https://github.com/jasonyzhang/RayDiffusion">code </a> </p>
@@ -332,7 +409,9 @@ hideblock('icra24roboagentBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="3dv24relposepp" data-selected="n">
-<img class="paper" src="figures/3dv24relposepp.gif" />
+<video class="paper" muted autoplay loop> 
+ <source src="https://jasonyzhang.com/assets/img/relposepp_espresso_small.mp4" type="video/mp4"> 
+ </video> 
 <p><b id="papertitle">RelPose++: Recovering 6D Poses from Sparse-view Observations</b> <br/> 
 Amy Lin*, Jason Y. Zhang*, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
 3DV, 2024 <br/> 
@@ -1467,7 +1546,7 @@ hideblock('uist13colorsBib');
 <!--------------------------------------------------------------------------->
 
  <script language="javascript" type="text/javascript" xml:space="preserve">
-showall()</script>
+showselected()</script>
 
 <!--------------------------------------------------------------------------->
 <!--- TEMPLATE
