--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ We do not have any short-term positions at this time.
   <tr>
     <td>
       <b>PhD Students</b><br>
-      <a href="https://himangim.github.io/">Himangi Mittal</a><br>
-      <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (co-advised with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
+      <a href="https://himangim.github.io/">Himangi Mittal</a><br>
+      <a href="https://qitaozhao.github.io/">Qitao Zhao</a><br>
       <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (co-advised with  Fernando De la Torre) <br>
     </td>
     </tr>
@@ -116,16 +116,17 @@ We do not have any short-term positions at this time.
     <tr>
     <td>
       <b>MS Students</b><br>
+      <a href="https://kidrauh.github.io/">Clara Cong</a> (MSCV)<br>
+      <a href="https://lucas-707.github.io/">Lucas Wu</a> (MSR)<br>
+      <a href="https://www.linkedin.com/in/rena-ju/">Rena Ju</a> (MSCV)<br>
       <a href="https://rureadyo.github.io/">Sungjae Park</a> (MSR)<br>
-      <a href="https://qitaozhao.github.io/">Qitao Zhao</a> (MSCV)<br>
-      <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a> (MSR)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
   <tr>
   <td>
-    <b>Undergraduate Students</b>
-    <br>Lucas Wu<br>
+    <b>Undergraduate Students</b><br>
+    <a href="https://www.linkedin.com/in/isaaclin04/">Isaac Lin</a><br>
   </td>
 </tr>
   <tr><td><br></td></tr>
@@ -133,16 +134,20 @@ We do not have any short-term positions at this time.
     <em>PhD</em>: <br>
       <a href="https://jasonyzhang.com/">Jason Zhang</a> (co-advised with Deva Ramanan), <em>Sparse-view 3D in the Wild, 2024. </em> Google <br>
       <a href="https://judyye.github.io/">Yufei Ye</a> (co-advised with Abhinav Gupta), <em>Learning to Perceive and Predict Everyday Interactions, 2024. </em> Postdoc at Stanford <br>
+      <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (co-advised with Abhinav Gupta), <em> Watch, Predict, Act: Robot Learning meets Web Videos, 2025.</em> Meta <br>
     <br>
 
     <em>MSR</em>: <br>
+    <a href="https://yanbo-xu.netlify.app/">Yanbo Xu</a>. PhD at Princeton<br>
     <a href="https://thatbrguy.github.io/">Bharath Raj</a>. PhD at Cornell<br>
     <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a>. PhD at Stanford<br>
     <br>
 
-    <em>MSCV</em>: <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
-    <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
-    <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>, <br>
+    <em>MSCV</em>: 
+    <a href="https://qitaozhao.github.io/">Qitao Zhao</a>, 
+    <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a>,
+    <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>, <br>
+    <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a>,
     <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a>,
     <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a><br>
     <br>
@@ -173,6 +178,123 @@ We do not have any short-term positions at this time.
 
 <div class="section">
 <h2> Publications (<a href="javascript:showall()" id="unselect" >all</a> | <a href="javascript:showselected()" id="select" >selected</a>) </h2><br><div class="year_heading" data-selected="n"><br>2025<hr width="220px" align="left"></div>
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr25diffusionsfm" data-selected="y">
+<img class="paper" src="https://qitaozhao.github.io/images/DiffusionSfM.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">DiffusionSfM: Predicting Structure and Motion via Ray Origin and Endpoint Diffusion</b> <br/> 
+Qitao Zhao, Amy Lin, Jeff Tan, Jason Y. Zhang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
+CVPR, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2504.13157">pdf </a>  &nbsp <a href="https://qitaozhao.github.io/DiffusionSfM">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr25diffusionsfmBib')">bibtex </a>  &nbsp <a href="https://github.com/QitaoZhao/DiffusionSfM">code </a> </p>
+<div class="papermeta" id="cvpr25diffusionsfmMeta">
+<pre xml:space="preserve" id="cvpr25diffusionsfmBib">
+
+@inproceedings{zhao2025diffusionsfm,
+  title={DiffusionSfM: Predicting Structure and Motion via Ray Origin and Endpoint Diffusion}, 
+  author={Qitao Zhao and Amy Lin and Jeff Tan and Jason Y. Zhang and Deva Ramanan and Shubham Tulsiani},
+  booktitle={CVPR},
+  year={2025} 
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr25diffusionsfmBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr25uniphy" data-selected="y">
+<img class="paper" src="https://himangim.github.io/images/grid_animation.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">UniPhy: Learning a Unified Constitutive Model for Inverse Physics Simulation</b> <br/> 
+Himangi Mittal, Peiye Zhuang, Hsin-Ying Lee, <strong>Shubham Tulsiani</strong> <br/> 
+CVPR, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2505.16971">pdf </a>  &nbsp <a href="https://himangim.github.io/UniPhy">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr25uniphyBib')">bibtex </a>  &nbsp <a href="https://github.com/HimangiM/UniPhy_CVPR2025">code </a> </p>
+<div class="papermeta" id="cvpr25uniphyMeta">
+<pre xml:space="preserve" id="cvpr25uniphyBib">
+
+@inproceedings{mittal2025uniphy,
+  title={UniPhy: Learning a Unified Constitutive Model for Inverse Physics Simulation},
+  author={Mittal, Himangi and Zhuang, Peiye and Lee, Hsin-Ying and Tulsiani, Shubham},
+  booktitle={CVPR},
+  year={2025} 
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr25uniphyBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr25aerialmegadepth" data-selected="y">
+<video class="paper" muted autoplay loop> 
+ <source src="https://www.khiemvuong.com/projects/aerialmd_cvpr25/teaser_cvpr2025.m4v" type="video/mp4"> 
+ </video> 
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">AerialMegaDepth: Learning Aerial-Ground Reconstruction and View Synthesis</b> <br/> 
+Khiem Vuong, Anurag Ghosh, Deva Ramanan*, Srinivasa Narasimhan*, <strong>Shubham Tulsiani</strong>* <br/> 
+CVPR, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2504.13157">pdf </a>  &nbsp <a href="https://aerial-megadepth.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr25aerialmegadepthBib')">bibtex </a>  &nbsp <a href="https://github.com/kvuong2711/aerial-megadepth">code </a> </p>
+<div class="papermeta" id="cvpr25aerialmegadepthMeta">
+<pre xml:space="preserve" id="cvpr25aerialmegadepthBib">
+
+@inproceedings{vuong2025aerialmegadepth,
+  title={AerialMegaDepth: Learning Aerial-Ground Reconstruction and View Synthesis},
+  author={Vuong, Khiem and Ghosh, Anurag and Ramanan, Deva and Narasimhan, Srinivasa and Tulsiani, Shubham},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year={2025},
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr25aerialmegadepthBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr25turbo3d" data-selected="y">
+<img class="paper" src="https://hzhupku.github.io/image/pubpage/turbo3d.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Turbo3D: Ultra-fast Text-to-3D Generation</b> <br/> 
+Hanzhe Hu, Tianwei Yin, Fujun Luan, Yiwei Hu, Hao Tan, Zexiang Xu, Sai Bi, <strong>Shubham Tulsiani</strong>*, Kai Zhang* <br/> 
+CVPR, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2412.04470">pdf </a>  &nbsp <a href="https://turbo-3d.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr25turbo3dBib')">bibtex </a> </p>
+<div class="papermeta" id="cvpr25turbo3dMeta">
+<pre xml:space="preserve" id="cvpr25turbo3dBib">
+
+@inproceedings{huturbo3d,
+  title={Turbo3D: Ultra-fast Text-to-3D Generation},
+  author={Hanzhe Hu and Tianwei Yin and Fujun Luan and Yiwei Hu and Hao Tan and Zexiang Xu and Sai Bi and Shubham Tulsiani and Kai Zhang},
+  booktitle={CVPR},
+  year={2025} 
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr25turbo3dBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr25scenefactor" data-selected="n">
+<img class="paper" src="https://www.3dunderstanding.org/papers/2025/bokhovkin2025scenefactor/thumb.jpg" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">SceneFactor: Factored Latent 3D Diffusion for Controllable 3D Scene Generation</b> <br/> 
+Alexey Bokhovkin, Quan Meng, <strong>Shubham Tulsiani</strong>, Angela Dai <br/> 
+CVPR, 2025 <br/> 
+<a href="https://arxiv.org/pdf/2412.01801">pdf </a>  &nbsp <a href="https://alexeybokhovkin.github.io/scenefactor/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr25scenefactorBib')">bibtex </a>  &nbsp <a href="https://github.com/alexeybokhovkin/SceneFactor">code </a> </p>
+<div class="papermeta" id="cvpr25scenefactorMeta">
+<pre xml:space="preserve" id="cvpr25scenefactorBib">
+
+@inproceedings{bokhovkin2025scenefactor,
+  title={SceneFactor: Factored Latent 3D Diffusion for Controllable 3D Scene Generation}, 
+  author={Bokhovkin, Alexey and Meng, Quan and Tulsiani, Shubham and Dai, Angela},
+  booktitle={CVPR},
+  year={2025} 
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr25scenefactorBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
 <!--------------------------------------------------------------------------->
 <div class="paper" id="3dv25materialfusion" data-selected="y">
 <video class="paper" muted autoplay loop> 
@@ -224,7 +346,7 @@ hideblock('3dv25dressreconBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="neurips24ags" data-selected="y">
 <img class="paper" src="https://qitaozhao.github.io/images/SparseAGS.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Sparse-view Pose Estimation and Reconstruction via Analysis by Generative Synthesis</b> <br/> 
+<p><b id="papertitle">Sparse-view Pose Estimation and Reconstruction via Analysis by Generative Synthesis</b> <br/> 
 Qitao Zhao, <strong>Shubham Tulsiani</strong> <br/> 
 NeurIPS, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2412.03570">pdf </a>  &nbsp <a href="https://qitaozhao.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('neurips24agsBib')">bibtex </a>  &nbsp <a href="https://github.com/QitaoZhao/SparseAGS/">code </a> </p>
@@ -247,7 +369,7 @@ hideblock('neurips24agsBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="eccv24track2act" data-selected="y">
 <img class="paper" src="https://homangab.github.io/pics/glimpse.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Track2Act: Predicting Point Tracks from Internet Videos Enables Diverse Zero-shot Manipulation</b> <br/> 
+<p><b id="papertitle">Track2Act: Predicting Point Tracks from Internet Videos Enables Diverse Zero-shot Manipulation</b> <br/> 
 Homanga Bharadhwaj, Roozbeh Mottaghi*, Abhinav Gupta*, <strong>Shubham Tulsiani</strong>* <br/> 
 ECCV, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2405.01527">pdf </a>  &nbsp <a href="https://homangab.github.io/track2act/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv24track2actBib')">bibtex </a>  &nbsp <a href="https://github.com/homangab/Track-2-Act/">code </a> </p>
@@ -270,7 +392,7 @@ hideblock('eccv24track2actBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="eccv24upfusion" data-selected="n">
 <img class="paper" src="https://bharathrajn.com/assets/img/publication_preview/ITW_lock.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">UpFusion: Novel View Diffusion from Unposed Sparse View Observations</b> <br/> 
+<p><b id="papertitle">UpFusion: Novel View Diffusion from Unposed Sparse View Observations</b> <br/> 
 Bharath Raj Nagoor Kani, Hsin-Ying Lee, Sergey Tulyakov, <strong>Shubham Tulsiani</strong> <br/> 
 ECCV, 2024 <br/> 
 <a href="https://arxiv.org/pdf/2312.06661.pdf">pdf </a>  &nbsp <a href="https://upfusion3d.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv24upfusionBib')">bibtex </a>  &nbsp <a href="https://github.com/upfusion3d/upfusion">code </a> </p>
